--- a/智能农业/.project
+++ b/智能农业/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>wangpengfei_智慧农业_5.18</name>
+	<name>0_zzny_5_29</name>
 	<comment></comment>
 	<projects>
 	</projects>
