--- a/智能农业/bin/AndroidManifest.xml
+++ b/智能农业/bin/AndroidManifest.xml
@@ -29,6 +29,7 @@
             android:screenOrientation="landscape"></activity>
         <activity android:name="com.example.wangpengfei.MainActivity"></activity>
         <activity android:name="com.example.wangpengfei.UserLoginActivity"></activity>
+           <activity android:name="com.example.wangpengfei.GuideScreenActivity"></activity>
     </application>
 
 </manifest>
